Updated Modules with Validation Checks